Bug 367997 - regression: clicking on HTML Side Bar can no longer toggle html/plain text
Summary: regression: clicking on HTML Side Bar can no longer toggle html/plain text
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-30 09:50 UTC by Martin Koller
Modified: 2016-10-28 19:39 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.08.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2016-08-30 09:50:58 UTC
In kmail2/KDE4 I could click on the left HTML Side Bar in the message viewer to toggle between plain-text and HTML display of a mail which had both body parts available.

kmail 5.3.0 now still shows in the tooltip that "toggle" shall be possible, but I can only switch from plain-text to HTML but not back.

The mail I'm seeing has
Content-Type: multipart/alternative;

First part is
Content-Type: text/plain; charset="iso-8859-1"
Content-Transfer-Encoding: quoted-printable

next part is
Content-Type: text/html; charset="iso-8859-1"
Content-Transfer-Encoding: quoted-printable


Reproducible: Always
Comment 1 Laurent Montel 2016-09-01 06:28:58 UTC
I confirm it.
Comment 2 Stephan Diestelhorst 2016-09-20 14:59:13 UTC
Is that related to the hotkey for "Toggle HTML Display Mode" stopped working?

Version 5.3.0 (QtWebEngine)
Using:
KDE Frameworks 5.27.0
Qt 5.7.0 (built against 5.7.0)
The xcb windowing system

via KDE/neon 4:16.08.1+p16.04+git20160918.0030-0

May also be related to bug 363027
Comment 3 Martin Koller 2016-10-26 15:55:52 UTC
proposed patch: https://git.reviewboard.kde.org/r/129266/
Comment 4 Martin Koller 2016-10-28 19:39:54 UTC
Git commit 925145c7bb7c5a44bf5d9ad414179432d7c9aafa by Martin Koller.
Committed on 28/10/2016 at 19:20.
Pushed by mkoller into branch 'Applications/16.08'.

fix: clicking on HTML Side Bar can no longer toggle html/plain text
FIXED-IN: 16.08.3
REVIEW: 129266

M  +1    -0    messageviewer/src/viewer/viewer_p.cpp

http://commits.kde.org/messagelib/925145c7bb7c5a44bf5d9ad414179432d7c9aafa