fix: clicking on HTML Side Bar can no longer toggle html/plain text

BUG: 367997
FIXED-IN: 16.08.3
REVIEW: 129266