messageviewer/src/viewer/viewer_p.cpp
@@ -2048,6 +2048,7 @@ void ViewerPrivate::slotToggleHtmlMode()
     const int pos = (availableModes.indexOf(mode) + 1) % availableModes.size();
     setDisplayFormatMessageOverwrite(translateToDisplayFormat(availableModes[pos]));
     update(MimeTreeParser::Force);
+    mColorBar->setAvailableModes(availableModes);
 }
 
 void ViewerPrivate::slotFind()
